eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merola-station-api-deployment
  labels:
    app: merola-station-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merola-station-api
  template:
    metadata:
      labels:
        app: merola-station-api
    spec:
      containers:
      - name: merola-station-api
        image: 620495856348.dkr.ecr.us-east-2.amazonaws.com/merolastation:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
