eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merola-station-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "a1448fc7bf1f7419d8b304b5eff60906-1208942517.us-east-2.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: merola-station-api-service
            port:
              number: 80
